major changes to circuit-page + minor overall changes restructured + restyled circuit-page added mediaqueries to circuit-page fixed hamburger not opening navbar removed border effect on navbar hamburger added scrollbar to main.css

--- a/circuit/style.css
+++ b/circuit/style.css
@@ -9,8 +9,9 @@ section:not(:last-child) {
     margin-bottom: 7.5rem;
 }
 
-section:last-child {
-    margin-bottom: 2.5rem;
+section#today div.content > img,
+section#history img {
+    width: 850px;
 }
 
 section#today div.content {
@@ -20,72 +21,52 @@ section#today div.content {
     gap: 5rem;
 }
 
-section#today div.content > div {
+section#today div.content div.data {
+    width: 25vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
 }
 
-section#today div.content > img {
-    width: 50vw;
+table#fastest-lap th,
+table#fastest-lap td {
+    width: 50%;
 }
 
-section#today table {
-    border-collapse: collapse;
-    border: 1px solid #000;
-}
-
-section#today table td,
-section#today table th {
-    border: 1px solid #000;
-    padding: 0.5rem;
-}
-
-section#today table#general th {
-    text-align: left;
-    padding-right: 1rem;
-}
-
-section#today table#general td {
-    padding-left: 1rem;
-}
-
-section#today table#fastest-lap th {
+table#fastest-lap th {
     text-align: center;
+    border: none;
+}
+
+section#today table#fastest-lap td {
+    vertical-align: middle;
 }
 
 section#today table#fastest-lap td > div {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.6rem;
 }
 
 section#today table#fastest-lap td p {
     margin: 0;
+    text-align: center;
 }
 
-section#today table#fastest-lap td > div > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.75rem;
-    margin: 0.75rem;
-}
-
-section#today table#fastest-lap td div.driver img {
+section#today table#fastest-lap tr#driver img {
     width: 25px;
     border: 1px solid #ccc;
     border-radius: 0.2rem;
 }
 
-section#today table#fastest-lap td div.car img {
+section#today table#fastest-lap tr#car img {
     width: 32.5px;
 }
 
 section#evolution img {
-    height: 75vh;
+    width: 1100px;
 }
 
 section#history div.content {
@@ -102,23 +83,15 @@ section#history div.content > div {
     gap: 5rem;
 }
 
-section#history div.content > div:nth-child(even) {
-    flex-direction: row;
-}
-
 section#history div.content > div:nth-child(odd) {
     flex-direction: row-reverse;
 }
 
 section#history div.content div.content-text {
-    width: 40vw;
+    width: 45rem;
 }
 
 section#history div.content div.content-text h1 {
     font-size: 1.3rem;
     letter-spacing: 0;
-}
-
-section#history img {
-    width: 47.5vw;
 }
