--- a/navbar.css
+++ b/navbar.css
@@ -13,3 +13,10 @@ nav ul li a:visited {
     text-transform: uppercase;
     text-align: center;
 }
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
